test/TestPhases/typechecker/invalid/WeakActivityReturn.blc
module

activity calc() returns int64
    cobegin weak
        await true
        return 0
    with
        await true
    end
end

activity main ()()
    var x: int64
    run x = calc()
    await false
end
